src/main/resources/static/css/style.css
body {
    padding: 0;
	margin: 0;
}

a {
    text-decoration: none;
    color: black;
}

a:hover {
    text-decoration: underline;
    color: #6DB33F;
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0.5em 1.5em;
}

.header-logo {
    display: flex;
    align-items: center;
    gap: 0.5em;
}

.header-logo img {
    height: 3em;
}

.header-logo a {
    font-weight: bold;
    font-size: 1.5em;
    text-decoration: none;
}


.header-logo a:hover {
    color: black;
}

.header-nav {
    display: flex;
    gap: 1.5em;
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1em 1.5em;
    margin-top: 2em;
}

.links {
	display: flex;
	flex-direction: row;
	gap: 1em;
}

.color-green-base{
	color: #6DB33F;
}

.color-green-detail{
	color: #4A8C2C;
}

.color-green-fresh{
	color: #A8E08C;
}

